STM32/.metadata/.plugins/org.eclipse.cdt.ui/001_UART_interactive_console.build.log
13:50:52 **** Incremental Build of configuration Debug for project 001_UART_interactive_console ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function '_isatty':
../Core/Src/main.c:24:1: error: 'errno' undeclared (first use in this function)
   24 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:4:1: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
    3 | #include <stdio.h>
  +++ |+#include <errno.h>
    4 | #if !defined(OS_USE_SEMIHOSTING)
../Core/Src/main.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
   24 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:24:9: error: 'EBADF' undeclared (first use in this function)
   24 | errno = EBADF;
      |         ^~~~~
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:37:10: error: 'EIO' undeclared (first use in this function)
   37 |   return EIO;
      |          ^~~
../Core/Src/main.c:39:2: error: 'errno' undeclared (first use in this function)
   39 |  errno = EBADF;
      |  ^~~~~
../Core/Src/main.c:39:2: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
../Core/Src/main.c:39:10: error: 'EBADF' undeclared (first use in this function)
   39 |  errno = EBADF;
      |          ^~~~~
../Core/Src/main.c: In function '_close':
../Core/Src/main.c:46:1: error: 'errno' undeclared (first use in this function)
   46 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:46:1: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
../Core/Src/main.c:46:9: error: 'EBADF' undeclared (first use in this function)
   46 | errno = EBADF;
      |         ^~~~~
../Core/Src/main.c: In function '_lseek':
../Core/Src/main.c:54:1: error: 'errno' undeclared (first use in this function)
   54 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:54:1: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
../Core/Src/main.c:54:9: error: 'EBADF' undeclared (first use in this function)
   54 | errno = EBADF;
      |         ^~~~~
../Core/Src/main.c: In function '_read':
../Core/Src/main.c:65:8: error: 'EIO' undeclared (first use in this function)
   65 | return EIO;
      |        ^~~
../Core/Src/main.c:67:1: error: 'errno' undeclared (first use in this function)
   67 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:67:1: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
../Core/Src/main.c:67:9: error: 'EBADF' undeclared (first use in this function)
   67 | errno = EBADF;
      |         ^~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:70:27: warning: 'struct stat' declared inside parameter list will not be visible outside of this definition or declaration
   70 | int _fstat(int fd, struct stat* st) {
      |                           ^~~~
../Core/Src/main.c: In function '_fstat':
../Core/Src/main.c:72:3: error: dereferencing pointer to incomplete type 'struct stat'
   72 | st->st_mode = S_IFCHR;
      |   ^~
../Core/Src/main.c:72:15: error: 'S_IFCHR' undeclared (first use in this function)
   72 | st->st_mode = S_IFCHR;
      |               ^~~~~~~
../Core/Src/main.c:76:1: error: 'errno' undeclared (first use in this function)
   76 | errno = EBADF;
      | ^~~~~
../Core/Src/main.c:76:1: note: 'errno' is defined in header '<errno.h>'; did you forget to '#include <errno.h>'?
../Core/Src/main.c:76:9: error: 'EBADF' undeclared (first use in this function)
   76 | errno = EBADF;
      |         ^~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:97:14: error: expected declaration specifiers or '...' before '&' token
   97 | RetargetInit(&huart2);
      |              ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:50:52 Build Failed. 18 errors, 1 warnings. (took 615ms)

